--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # Local Environment Variables
 .env.local
+.env
 .env.development.local
 .env.production.local
 .env.test.local
@@ -20,4 +21,3 @@ pnpm-debug.log*
 # Misc
 .DS_Store
 *.pem
-.env*
