--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,20 @@
-
 {
-  "name": "Polimik Gestion",
-  "short_name": "Polimik",
-  "description": "Application de gestion pour Polimik",
+  "name": "PoliClik",
+  "short_name": "PoliClik",
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#2743e3",
+  "background_color": "#ffffff",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "theme_color": "#3F51B5",
-  "background_color": "#F0F2F5",
-  "start_url": "/",
-  "display": "standalone",
-  "orientation": "portrait"
+  ]
 }
